In this commit the Navbar Extended

--- a/views/about-partners.ejs
+++ b/views/about-partners.ejs
@@ -55,6 +55,73 @@
 
                         <div class="client-logo row space-top-md">
                             <div class="col-sm-4 col-xs-6 res-m-bttm-xs">
+                                <a href="https://www.mantracgroup.com/ng/en/about-us" target="_new">
+                                    <img alt=""
+                                        src="http://4.bp.blogspot.com/-23eT257QTvo/VZOdRhHt2lI/AAAAAAAAJsw/vtmBDA3wwSM/s1600/Mantrac-CAT-Logo-en-New.jpg">
+                                </a>
+                            </div>
+                            <div class="col-sm-8 col-xs-12">
+                                <p>
+                                    <strong>Mantrac Nigeria</strong> are the authorized Cat dealer in Nigeria,
+                                    distributing and supporting
+                                    the full range of Cat products. We are proud to supply the best equipment to the
+                                    most demanding industries and aim to keep your equipment running at peak
+                                    productivity.
+
+                                    <strong>Mantrac Nigeria</strong> are not only a supplier, but also a solution
+                                    provider, we offer
+                                    integrated business solutions backed by technical expertise and local knowledge.
+                                </p>
+                                <a href="https://www.mantracgroup.com/ng/en/about-us" target="_new">
+                                    Mantrac Nigeria</a>
+                            </div>
+                        </div>
+
+
+                        <div class="client-logo row space-top-md">
+                            <div class="col-sm-4 col-xs-6 res-m-bttm-xs">
+                                <a href="https://www.berkhamcapital.com/" target="_new">
+                                    <img alt=""
+                                        src="https://irp-cdn.multiscreensite.com/cb78afca/dms3rep/multi/mobile/Berkham+Capital+Logo+1.jpg">
+                                </a>
+                            </div>
+                            <div class="col-sm-8 col-xs-12">
+                                <p>
+                                    <strong>Berkham Capital</strong> is a global business development company,
+                                    incorporated in England,
+                                    United Kingdom, with global service offerings in transaction advisory, consulting
+                                    services, transaction structuring, global finance solutions, alternative finance
+                                    solutions, investment solutions, business development and project development
+                                    solutions, which we offer to companies worldwide, from our office in London, United
+                                    Kingdom.
+                                </p>
+                                <a href="https://www.berkhamcapital.com/" target="_new">Berkhamcapital.com</a>
+                            </div>
+                        </div>
+
+
+
+                        <div class="client-logo row space-top-md">
+                            <div class="col-sm-4 col-xs-6 res-m-bttm-xs">
+                                <a href="http://truckcountry.com/" target="_new">
+                                    <img alt=""
+                                        src="http://truckcountry.com/wp-content/uploads/2019/01/TCLogo_RGB_wTag-768x359.png">
+                                </a>
+                            </div>
+                            <div class="col-sm-8 col-xs-12">
+                                <p>
+                                    <strong>Truck Country®</strong> Trailer
+                                    is the largest Freightliner dealer group in the U.S. today, serving customers at 23
+                                    locations in Iowa, Indiana, Ohio, Minnesota, and Wisconsin. For nearly 60 years,
+                                    Truck Country/Stoops has offered new and used medium and heavy duty trucks, expert
+                                    service, an extensive parts inventory, and convenient financing options.
+                                </p>
+                                <a href="http://truckcountry.com" target="_new">truckcountry.com</a>
+                            </div>
+                        </div>
+
+                        <div class="client-logo row space-top-md">
+                            <div class="col-sm-4 col-xs-6 res-m-bttm-xs">
                                 <a href="https://www.rscmme.com/" target="_new">
                                     <img alt="" src="https://www.rscmme.com/wp-content/uploads/2017/02/logo.png">
                                 </a>
@@ -76,6 +143,34 @@
                                     offices in Mongolia, Zimbabwe and Mali.
                                 </p>
                                 <a href="https://www.rscmme.com/" target="_new">RSC Website</a>
+                            </div>
+                        </div>
+
+
+                        <div class="client-logo row space-top-md">
+                            <div class="col-sm-4 col-xs-6 res-m-bttm-xs">
+                                <a href="http://geohydro.com/" target="_new">
+                                    <img alt=""
+                                        src="https://media.licdn.com/media-proxy/ext?w=800&h=800&hash=FlOKiHgTo%2BF8GD6DrBFK986HREg%3D&ora=1%2CaFBCTXdkRmpGL2lvQUFBPQ%2CxAVta5g-0R6nlh8Tw1It6a2FowGz60oISIfYC2G8G2f1spyfNT-tdoDScbaisgUbfCQJhlI_IfnwEXO5H_vmY8uyK7kGieizZcWjVhETOU01szkY7YQJAFx3kdKpF-qtMWsc8e1-TwyJC73iVV8vLQll8fq4GKH6GWxUi3WUbO71GJlCE-dQpthS4kZg98WVDpMV66l8mXE9n2i43Yz1IAsozK2nI1WoUkYMA2PqIvoWlb-O8AKNlm-Lv2PmiKeyAL6VMbwN5SWn1tfWOyKTq3NukC0A_Qko0pksNiXn1NQH0FudA84RVDTbutDgWEL24Jshrg">
+                                </a>
+                            </div>
+                            <div class="col-sm-8 col-xs-12">
+                                <p>
+                                    <strong>Geo-Hydro</strong> understands real-world problems. We’ve made them our
+                                    business since 1980,
+                                    using one simple formula for success — gather the right people, employ the latest
+                                    technology, and work hand-in-hand with owners, developers, design professionals,
+                                    lenders and contractors throughout the industry.
+
+                                    We study whole systems, and look at the pieces beneath those systems. We solve
+                                    problems economically and on tight schedules. We make good projects better, and we
+                                    do it all by working closely with you.
+
+                                    Having the right answers is like having the right tools for the job. You can work
+                                    more effectively, you can increase quality control and safety, and you can save
+                                    money.
+                                </p>
+                                <a href="http://geohydro.com/" target="_new">Geo-Hydro</a>
                             </div>
                         </div>
 
@@ -103,14 +198,32 @@
                         </div>
 
 
+                        <div class="client-logo row space-top-md">
+                            <div class="col-sm-4 col-xs-6 res-m-bttm-xs">
+                                <a href="https://www.gislexplore.com/" target="_new">
+                                    <img alt="" src="https://www.gislexplore.com/images/gisllogo.png">
+                                </a>
+                            </div>
+                            <div class="col-sm-8 col-xs-12">
+                                <p>
+                                    GEODEL INTEGRATED SYSTEMS LTD (GISL) was established as an indigenous exploration
+                                    company in 2008, in Nigeria with technical partners in Canada to support the solid
+                                    mineral development drive of the nation and also bridge the gap between discovering
+                                    and exploitation.
+                                </p>
+                                <p>GISL team is made up of highly experienced professionals with advance knowledge of
+                                    cutting edge exploration tools and Nigerian geological setting. The company provides
+                                    a wide range of geological services, geochemical studies, geological surveys and
+                                    drilling operations at the industry’s best standard and also provides developmental
+                                    services for mines such as mineral resource estimation, mine planning and design to
+                                    optimize mineral extraction in the most profitable approach.
+                                </p>
+
+                                <a href="https://www.gislexplore.com/" target="_new">GEODEL INTEGRATED SYSTEMS LTD</a>
+                            </div>
+                        </div>
 
                         <div class="gaps"></div>
-                        <hr>
-                        <h4>Our Investors Sheet</h4>
-                        <p>Transparency is key for our business and to ensure future investment learn about our
-                            Investor, how much has been invested in RCF minerals Limited, Our Investment Policy and Risk
-                            Management</p>
-                        <p><a href="#" class="btn btn-md">Download</a></p>
                         <hr>
 
                     </div>
