--- a/views/about-team.ejs
+++ b/views/about-team.ejs
@@ -75,8 +75,7 @@
                             <div class="team-member row">
                                 <div class="team-photo col-md-4 col-sm-5 col-xs-12">
                                     <a href="https://www.linkedin.com/in/josephoyediran/">
-                                        <img alt=""
-                                            src="https://www.palmcityyachts.com/wp/wp-content/uploads/palmcityyachts.com/2015/09/default-profile.png">
+                                        <img alt="" src="/image/team/joseph.jpg">
                                     </a>
                                 </div>
                                 <div class="team-info col-md-8 col-sm-7 col-xs-12">
@@ -250,6 +249,35 @@
                             </div>
                         </div>
 
+                        <div class="team-profile">
+                            <div class="team-member row">
+                                <div class="team-photo col-md-4 col-sm-5 col-xs-12">
+                                    <img
+                                        src="https://www.palmcityyachts.com/wp/wp-content/uploads/palmcityyachts.com/2015/09/default-profile.png">
+                                </div>
+                                <div class="team-info col-md-8 col-sm-7 col-xs-12">
+                                    <h3 class="name">
+                                        <a href="https://www.linkedin.com/in/nwigwe-chika-mathias-a02250169/">
+                                            Barr. Nwigwe Chika Mathias
+                                        </a>
+                                    </h3>
+                                    <p class="sub-title">Legal Advicer </p>
+                                    <p>
+                                        Nwigwe Chika Mathias works at Afuba Anaenugwu Obi & Partners.
+                                    </p>
+
+                                    <p>
+                                        <ul class="social">
+
+                                            <li>
+                                                <a href="https://www.linkedin.com/in/nwigwe-chika-mathias-a02250169/"><em
+                                                        class="fa fa-linkedin" aria-hidden="true"></em></a>
+                                            </li>
+                                        </ul>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="team-profile">
                             <div class="team-member row">
