--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -113,4 +113,6 @@
 <script src="/js/jquery.bundle.js"></script>
 <!-- Theme Script init() -->
 <script src="/js/app.js"></script>
+<!-- My customs JavaScript File -->
+<script src="/js/mailResponder.js"></script>
 <!-- End script -->
