--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,7 +20,6 @@
     <link rel="stylesheet" type="text/css" href="/css/vendor.bundle.css" />
     <link id="style-css" rel="stylesheet" type="text/css" href="/css/styles.css" />
 
-
     <meta property="og:title" content="RCF Mineral Limited is Solid Mineral and metals exploration company" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://www.rcfmineralsltd.com/" />
@@ -28,6 +27,8 @@
     <meta property="og:description" content="RCF Mineral Limited is Solid Mineral and metals exploration company who focuses
     on the exploration of Solid Minerals in Commerials Quantity such Copper, Gold, Iron-Ore, Lead, and Zinc, RCF Mineral Limited has
     Offices both in UK and Nigeria" />
+
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 </head>
 
