--- a/views/partials/navbar_bkup.ejs
+++ b/views/partials/navbar_bkup.ejs
@@ -17,6 +17,7 @@
                     <em class="fa fa-phone" aria-hidden="true"></em>
                     <span><a href="#">+234-814-0764-160</a></span>
                 </li>
+                <li class="quote-btn"><a href="/" class="btn">Get a Quote</a></li>
             </ul>
         </div>
         <!-- #end Logo -->
@@ -29,7 +30,7 @@
                 <span class="icon-bar"></span>
             </button>
             <!-- Q-Button for Mobile -->
-            <div class="quote-btn"><a class="btn" href="/contact-us">Enquire Today</a></div>
+            <div class="quote-btn"><a class="btn" href="/get-a-quote">Enquire Today</a></div>
         </div>
         <!-- MainNav -->
         <nav class="navbar-collapse collapse" id="mainnav">
@@ -39,51 +40,48 @@
 
                 <!-- About-us page -->
                 <li class="dropdown">
-                    <a href="#">Who we are</a>
+                    <a href="#">About Us</a>
                     <ul class="dropdown-menu">
                         <li><a href="/about">Overview</a></li>
-                        <li><a href="/about/value">Core Value</a></li>
-                        <li><a href="/about/strategy">Our strategy</a></li>
-                        <li><a href="/about/goverance">Coporate Goverance</a></li>
-                        <li><a href="/about/mission-vision">Mission &amp; Vision</a></li>
+                        <li><a href="/about/investors">Our Investors</a></li>
+                        <li><a href="/about/technical-partners">Our Technical Partners</a></li>
                         <li><a href="/about/management-team">Management Team</a></li>
+                        <!-- <li><a href="/about/testimonial">Testimonial</a></li> -->
                     </ul>
                 </li>
 
                 <!-- Services and Solutions page -->
                 <li class="dropdown">
-                    <a href="#">What we do</a>
+                    <a href="/solutions">What we do</a>
                     <ul class="dropdown-menu">
                         <li><a href="/services/minerals-mining">Minerals, Metals &amp; Mining</a></li>
+                        <!-- <li><a href="/services/renewable">Renewable Energy Technology</a></li>
+                        <li><a href="/services/agriculture">Agriculture</a></li>
+                        <li><a href="/services/maritime">Maritime</a></li>
+                        <li><a href="/services/aviation">Aviation</a></li>
+                        <li><a href="/services/oil-and-gas">Oil &amp; Gas Refinery</a></li> -->
                     </ul>
                 </li>
 
-                <!-- About-us page -->
+                <!-- Project Page
                 <li class="dropdown">
-                    <a href="#">Sustainability</a>
+                    <a href="/project">Project</a>
                     <ul class="dropdown-menu">
-                        <!-- <li><a href="/sustainability">Overview</a></li> -->
-                        <li><a href="/sustainability/operations">Our Operation</a></li>
-                        <li><a href="/sustainability/production">Sustainable Production</a></li>
-                        <li><a href="/sustainability/health-safety">Health &amp; Safety</a></li>
-                        <li><a href="/sustainability/risk-management">Risk Management</a></li>
-                        <!-- <li><a href="/sustainability/our-people">Our People</a></li> -->
+                        <li><a href="/project/ongoing-project">Ongoing Project</a></li>
+                        <li><a href="/project/completed-project">Complete Project</a></li>
                     </ul>
-                </li>
+                </li>-->
 
-                <li class="dropdown">
-                    <a href="#">Investors</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/about/investors">Our Investors</a></li>
-                        <li><a href="/about/technical-partners">Our Technical Partners</a></li>
-                    </ul>
-                </li>
+                <!-- Blog Page -->
+                <!-- <li><a href="/blog">Blog</a></li> -->
 
-                <!-- Metal Prices Page-->
+                <!-- Metal Prices Page -->
                 <li><a href="/metal-prices">Metal Prices</a></li>
 
+                <!-- Contact Page -->
+                <li><a href="/contact-us">Contact Us</a></li>
 
-                <li class="quote-btn"><a class="btn" href="/contact-us">Enquire Today</a></li>
+                <li class="quote-btn"><a class="btn" href="/get-a-quote">Enquire Today</a></li>
             </ul>
         </nav>
         <!-- #end MainNav -->
