--- a/views/partials/mailForm.ejs
+++ b/views/partials/mailForm.ejs
@@ -3,9 +3,13 @@
     <div class="wgs-content">
         <p>If you have any questions or would like to book a session please contact us.</p>
         <!-- TODO: NODEMAILER FEATURE -->
-        <form id="contact-us" class="form-quote" action="/send" method="post">
-            <%= %>
-            <div class="form-results"></div>
+        <form id="contact_us" class="form-quote" action="/send" method="post">
+            <div id="form_results" class="alert alert-success hide">
+                <span id="message"></span>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
             <div class="form-group">
                 <div class="form-field">
                     <input name="contact_name" type="text" placeholder="Name *" class="form-control required"
@@ -35,7 +39,13 @@
                         aria-required="true"></textarea>
                 </div>
             </div>
-            <button name="submit" type="submit" class="btn btn-alt sb-h">Submit</button>
+            <div class="form-group">
+                <div class="form-field">
+                    <div class="g-recaptcha" data-sitekey="6LcJ66EUAAAAAIoHHGeWL-yBBcHqtPPE9BnKjq6s"></div>
+                </div>
+            </div>
+
+            <button id="mail_send_btn" name="submit" type="submit" class="btn btn-alt sb-h">Submit</button>
         </form>
     </div>
 </div>
